[package]
name = "aligned-cmov"
version = "2.3.0"
description = "Fast constant-time conditional moves of aligned bytes"
authors = ["MobileCoin"]
license = "GPL-3.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/mobilecoinofficial/mc-oblivious"
keywords = ["aligned", "alignment", "cryptography", "constant-time", "utilities"]
categories = ["embedded", "memory-management", "cryptography", "no-std"]

[features]
no_asm_insecure = []

[dependencies]
aligned-array = { version = "1", features = ["subtle"] }
generic-array = { version = "0.14", default-features = false }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "large_cmov"
harness = false
