[package]
name = "mc-oblivious-map"
version = "2.3.0"
description = "Implementation of Oblivious Hash Map data structures on top of Oblivious RAM"
authors = ["MobileCoin"]
license = "GPL-3.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/mobilecoinofficial/mc-oblivious"
keywords = ["cryptography", "crypto", "constant-time", "oblivious-ram"]
categories = ["cryptography", "data-structures", "no-std"]

[features]
no_asm_insecure = ["aligned-cmov/no_asm_insecure"]

[dependencies]
aligned-array = { version = "1", features = ["subtle"] }
aligned-cmov = { path = "../aligned-cmov", version = "2.3" }
mc-oblivious-traits = { path = "../mc-oblivious-traits", version = "2.3" }

#third party
generic-array = { version = "0.14", default-features = false }
rand_core = { version = "0.6", default-features = false }
siphasher = "0.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
mc-rand = { version = "1" }
mc-oblivious-ram = { path = "../mc-oblivious-ram", version = "2.3" }
test-helper = { path = "../test-helper" }

[[bench]]
name = "ingest"
harness = false

[[bench]]
name = "view"
harness = false
