[package]
name = "mc-oblivious-ram"
version = "2.2.0"
description = "Implementations of Oblivious RAM data structures"
authors = ["MobileCoin"]
license = "GPL-3.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/mobilecoinofficial/mc-oblivious"
keywords = ["cryptography", "crypto", "constant-time", "oblivious-ram"]
categories = ["cryptography", "data-structures", "no-std"]

[features]
no_asm_insecure = ["aligned-cmov/no_asm_insecure"]

[dependencies]
aligned-cmov = { path = "../aligned-cmov", version = "2.2" }
balanced-tree-index = { path = "../balanced-tree-index", version = "2.2" }
mc-oblivious-traits = { path = "../mc-oblivious-traits", version = "2.2" }

rand_core = { version = "0.6", default-features = false }

[dev-dependencies]
test-helper = { path = "../test-helper" }
yare = "1.0.2"

