[package]
name = "no-asm-tests"
version = "2.3.0"
description = "A crate in another workspace which sets the no_asm_insecure flag and runs tests that way"
authors = ["MobileCoin"]
edition = "2018"
readme = "README.md"

[workspace]

[dependencies]
aligned-cmov = { path = "../aligned-cmov", features = ["no_asm_insecure"] }
balanced-tree-index = { path = "../balanced-tree-index" }
mc-oblivious-ram = { path = "../mc-oblivious-ram", features = ["no_asm_insecure"] }
mc-oblivious-traits = { path = "../mc-oblivious-traits", features = ["no_asm_insecure"] }
test-helper = { path = "../test-helper" }

[dev-dependencies]
GSL = "6.0.0"
